--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-countup": "^5.2.0",
     "react-dom": ">=16.8.0",
     "react-scripts": "^4.0.3",
+    "surge": "^0.23.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
